View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030684 | Open CASCADE | OCCT:Coding | public | 2019-04-29 22:34 | 2019-05-08 13:41 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Linux | OS | Ubuntu 19.04 | ||
Product Version | 7.3.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030684: Coding Rules - eliminate GCC compiler warnings -Wformat-overflow and -Wcatch-value | ||||
Description | The following GCC 8.3.0 compiler warnings on Ubuntu 19.04 should be eliminated:/occt.git/src/XSControl/XSControl_FuncShape.cxx:306: warning: ‘%d’ directive writing between 1 and 11 bytes into a region of size between 0 and 99 [-Wformat-overflow=] sprintf (noms,"%s_%d",nomsh,i); ^~~~~~~ /occt.git/src/Storage/Storage_TypeData.cxx:59: warning: catching polymorphic type ‘class Storage_StreamTypeMismatchError’ by value [-Wcatch-value=] catch (Storage_StreamTypeMismatchError) ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR30684 has been created by kgv. SHA-1: ee479e1332b44e19a56452830cfc66def4bb23a0 Detailed log of new commits: Author: kgv Date: Mon Apr 29 22:31:45 2019 +0300 0030684: Coding Rules - eliminate GCC compiler warnings -Wformat-overflow and -Wcatch-value |
|
Patch is ready for review. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR30684-master-KGV/ |
|
Branch CR30684 has been updated by abv. SHA-1: b6424b127a8f6d8dba6a41c885bb84fb2cf5623c Detailed log of new commits: Author: abv Date: Sat May 4 10:53:00 2019 +0300 // stylistic correction |
|
Reviewed with minor correction ("A const&" replaced by "const A&" - even if less canonical, it is the syntax more typical for OCCT code), please integrate |
|
Fix has been tested in framework of IR-WEEK18 Combination - OCCT branch : IR-WEEK18 master SHA - 1e1ffd657c7176e89947d21b63b6d6e5ae775d50 d67d4b811012eef8913d3c535c29654d0acf3c4c Products branch : IR-WEEK18 SHA - bde66da19002bfd6a68440a079d00728c5796b30 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16338.770000000099 / 16286.290000000015 [+0.32%] Products Total CPU difference: 10532.750000000042 / 10492.700000000066 [+0.38%] Windows-64-VC14: OCCT Total CPU difference: 17677.890625 / 17645.203125 [+0.19%] Products Total CPU difference: 12117.125 / 12107.4375 [+0.08%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30684 has been deleted by inv. SHA-1: b6424b127a8f6d8dba6a41c885bb84fb2cf5623c |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-04-29 22:34 | kgv | New Issue | |
2019-04-29 22:34 | kgv | Assigned To | => kgv |
2019-04-29 22:34 | kgv | OS | Ubuntu 18.04 => Ubuntu 19.04 |
2019-04-29 22:34 | kgv | Description Updated | |
2019-04-29 22:38 | git | Note Added: 0084058 | |
2019-04-30 08:04 | kgv | Note Added: 0084062 | |
2019-04-30 08:04 | kgv | Assigned To | kgv => abv |
2019-04-30 08:04 | kgv | Status | new => resolved |
2019-05-01 22:40 | kgv | Relationship added | child of 0030611 |
2019-05-01 22:41 | kgv | Relationship added | child of 0030609 |
2019-05-04 11:00 | git | Note Added: 0084123 | |
2019-05-04 11:01 | abv | Note Added: 0084124 | |
2019-05-04 11:01 | abv | Assigned To | abv => bugmaster |
2019-05-04 11:01 | abv | Status | resolved => reviewed |
2019-05-06 10:42 | bugmaster | Test case number | => Not required |
2019-05-06 10:44 | bugmaster | Note Added: 0084180 | |
2019-05-06 10:44 | bugmaster | Status | reviewed => tested |
2019-05-08 12:38 | bugmaster | Changeset attached | => occt master 1ac10599 |
2019-05-08 12:38 | bugmaster | Status | tested => verified |
2019-05-08 12:38 | bugmaster | Resolution | open => fixed |
2019-05-08 13:41 | git | Note Added: 0084246 |