0030684: Coding Rules - eliminate GCC compiler warnings -Wformat-overflow and -Wcatch-value